@@ -10,3 +10,4 @@ Rory McCann - rory@technomancy.org
 Tom Clancy
 Chris Vigelius
 Michael van Tellingen
+Hugo Rodger-Brown - hugo@rodger-brown.com
